# AgentOps-Agent-System-Operations

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  agentops-unique-features.md  docker-compose.yml  domain-1-agentops.md  pyproject.toml
.github/workflows/: agentops.yml  docs.yml
agent-chaos-toolkit/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
agent-chaos-toolkit/scenarios/: example.yaml
agent-chaos-toolkit/src/chaos_toolkit/: __init__.py  api.py  cli.py  config.py  db.py  injector.py  metrics.py  models.py  scenario_proposer.py  scenarios.py  schemas.py  scoring.py
agent-chaos-toolkit/src/chaos_toolkit/reporters/: __init__.py  ci.py
agent-chaos-toolkit/src/chaos_toolkit/targets/: __init__.py  llm.py  mcp.py  rag.py  tools.py
agent-chaos-toolkit/tests/: conftest.py  test_api.py  test_injector.py  test_reporters.py  test_scenario_proposer.py  test_scenarios.py  test_scoring.py  test_targets.py
agent-circuit-breaker/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agent-circuit-breaker/src/circuit_breaker/: __init__.py  anomaly_engine.py  api.py  cli.py  config.py  db.py  dtmc.py  graph_monitor.py  incident_engine.py  kill_switch.py  metrics.py  models.py  policy_engine.py  predictor.py  proxy.py  risk_engine.py  rollback_engine.py  schemas.py  state_tracker.py  yaml_policy.py
agent-circuit-breaker/tests/: conftest.py
agent-circuit-breaker/tests/unit/: test_anomaly_engine.py  test_dtmc.py  test_graph_monitor.py  test_incident_engine.py  test_kill_switch.py  test_policy_engine.py  test_proxy.py  test_risk_engine.py  test_rollback_engine.py
agent-gateway/: pyproject.toml
agent-gateway/src/gateway/: api.py  config.py  metrics.py
agent-gateway/tests/: test_api.py
agent-slo-platform/: .env.example  Dockerfile  README.md  SPEC.md  docker-compose.yml  pyproject.toml
agent-slo-platform/alembic/: env.py
agent-slo-platform/alembic/versions/: 55411487c709_initial_schema.py
agent-slo-platform/src/agent_slo/: __init__.py  alerts.py  api.py  cli.py  compliance.py  config.py  db.py  engine.py  extractor.py  metrics.py  models.py  receiver.py  risk_budget.py  schemas.py  yaml_spec.py
agent-slo-platform/tests/: conftest.py
agent-slo-platform/tests/integration/: test_api.py  test_api_more.py  test_cli.py
agent-slo-platform/tests/unit/: test_alerts.py  test_compliance.py  test_engine.py  test_engine_advanced.py  test_receiver.py  test_risk_budget.py  test_yaml_spec.py
agentops-core/: pyproject.toml
agentops-core/src/agentops_core/: __init__.py  auth.py  base.py  config.py  rate_limiter.py  telemetry.py
agentops-events/: pyproject.toml
agentops-events/src/agentops_events/: __init__.py  models.py  nats_client.py
agentops-events/tests/: test_models.py  test_nats_client.py
agentops-langchain/: pyproject.toml
agentops-langchain/src/agentops_langchain/: __init__.py  handler.py
agentops-langchain/tests/: test_handler.py
agentops-sdk/: pyproject.toml
agentops-sdk/src/agentops/: __init__.py  client.py
agentops-sdk/tests/: test_sdk.py
dashboard/: pyproject.toml
dashboard/src/dashboard/: api.py  metrics.py
dashboard/tests/: test_api.py
docs/: agentops-platform.md
helm/agentops/: Chart.yaml  values.yaml
helm/agentops/templates/: _helpers.tpl  configmap.yaml  deployments.yaml  ingress.yaml  postgres.yaml  secret.yaml  services.yaml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: agentops.json  dashboard-provider.yml
scripts/: bootstrap-terraform.sh  demo_langchain.py  seed.py
terraform/: alb.tf  cloudwatch.tf  ecs.tf  iam.tf  outputs.tf  rds.tf  security.tf  terraform.tfvars.example  variables.tf  versions.tf  vpc.tf
website/: docusaurus.config.ts  package-lock.json  sidebars.ts
website/docs/: api-reference.mdx  architecture.mdx  chaos-toolkit.mdx  ci-cd.mdx  circuit-breaker.mdx  dashboard.mdx  deployment.mdx  dtmc-predictor.mdx  gateway.mdx  graph-monitor.mdx  otel-genai.mdx  overview.mdx  rate-limiting.mdx  scenario-proposer.mdx  slo-platform.mdx  trust-score.mdx
website/src/css/: custom.css
website/src/pages/: index.tsx
