[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# no packages at root — each service installs independently

[project]
name = "agentops"
version = "0.1.0"
description = "AgentOps — AI Agent Safety & Observability Platform"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "AgentOps Project"}]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "black>=24.4.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "aiosqlite>=0.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
