[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-circuit-breaker"
version = "0.1.0"
description = "Runtime safety for AI agents — anomaly detection, policy enforcement, kill switch, and rollback."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "AgentOps Project"},
]
keywords = ["ai", "agents", "circuit-breaker", "safety", "reliability", "opentelemetry"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "agentops-core",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "prometheus-client>=0.20.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "psycopg2-binary>=2.9.9",
  "asyncpg>=0.29.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "pyyaml>=6.0.1",
  "httpx>=0.27.0",
  "python-dateutil>=2.9.0",
  "typer>=0.12.0",
  "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "black>=24.4.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "factory-boy>=3.3.0",
  "aiosqlite>=0.20.0",
]

[project.scripts]
cbctl = "circuit_breaker.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = "--cov=circuit_breaker --cov-report=term-missing --cov-fail-under=75"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
