[project]
name = "agentops-core"
version = "0.1.0"
description = "Shared core library for AgentOps platform"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
